[gd_scene load_steps=8 format=2]

[ext_resource path="res://gate/Gate.gd" type="Script" id=1]
[ext_resource path="res://assets/gate_main.png" type="Texture" id=2]

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "close_gate"
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 4.5, 1 ),
"update": 0,
"values": [ Vector2( 0, -150 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=1]
resource_name = "open_gate"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.6, 0.9, 1.1, 1.8, 2.1, 2.3, 3 ),
"transitions": PoolRealArray( 2.2974, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -70 ), Vector2( 0, -50 ), Vector2( 0, -50 ), Vector2( 0, -120 ), Vector2( 0, -100 ), Vector2( 0, -100 ), Vector2( 0, -150 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "open_gate_fast"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.8, 1.1, 1.3, 2 ),
"transitions": PoolRealArray( 2.2974, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -95 ), Vector2( 0, -75 ), Vector2( 0, -75 ), Vector2( 0, -150 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "open_gate_fastest"
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -150 ) ]
}

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 2 )
anims/close_gate = SubResource( 3 )
anims/open_gate = SubResource( 1 )
anims/open_gate_fast = SubResource( 5 )
anims/open_gate_fastest = SubResource( 4 )

[node name="Gate" type="Sprite" parent="."]
position = Vector2( 2, -31 )
scale = Vector2( 2, 2 )
texture = ExtResource( 2 )

[node name="AreaKill" type="Area2D" parent="."]
collision_mask = 2

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="AreaKill"]
position = Vector2( 0, 3.449 )
polygon = PoolVector2Array( -21, 18.551, 39, 39, 39, 12.551, -21, -4.449 )

[node name="AreaStop" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 16

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="AreaStop"]
position = Vector2( -22, -8 )
polygon = PoolVector2Array( -3, 30, 12, 34, 12, -71, -3, -74 )

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="area_entered" from="AreaKill" to="." method="_on_AreaKill_area_entered"]
[connection signal="area_entered" from="AreaStop" to="." method="_on_AreaStop_area_entered"]
[connection signal="area_exited" from="AreaStop" to="." method="_on_AreaStop_area_exited"]
